--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Intermascota PetShop</a>
+      <a class="navbar-brand" href="#">Carrito de compras</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -40,6 +40,8 @@
 
 <body>
     <h1>Carrito de compras</h1>
+
+    <div id="divProductos"></div>
     
     <div class="container"></div>
 
