--- a/index.html
+++ b/index.html
@@ -2,50 +2,113 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Intermascota Carrito de compras </title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title> Ecommerce web - Shopping Cart Petshop </title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Carrito de compras</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Productos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Servicios</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled">Contacto</a>
-          </li>
-        </ul>
+<body>
+
+  <header>
+    <div class="nav container">
+      <a href="#" class="logo">Petshop </a>
+      <i class='bx bx-shopping-bag' id="cart-icon"></i>
+      <div class="cart">
+        <h2 class="cart-title">Tu Carrito</h2>
+
+        <div class="cart-content">
+
+          <div class="cart-box">
+            <img src="" alt="" class="cart-img">
+            <div class="detail-box">
+              <div class="cart-product-title">Comedero acero Inoxidable</div>
+              <div class="cart-price">850$</div>
+              <input type="number" value="1" class="cart-quantity">
+            </div>
+
+            <i class="bx bxs-trash-alt cart-remove"></i>
+          </div>
+        </div>
+
+        <div class="total">
+          <div class="total-title">total</div>
+          <div class="total-price">$0</div>
+        </div>
+        <button type="button" class="btn-buy">Compra ahora</button>
+        <i class='bx bx-x' id="close-cart"></i>
+      </div>
+
+    </div>
+
+  </header>
+
+  <section class="shop container">
+    <h2 class="section title">Productos en tienda</h2>
+    <div class="shop-content">
+
+      <div class="product-box">
+        <img src="" alt="" class="product-img">
+        <h2 class="product-title"> Comedero Inoxidable </h2>
+        <span class="price">$570</span>
+        <i class='bx bx-shopping-bag add-cart'></i>
+      </div>
+
+      <div class="product-box">
+        <img src="" alt="" class="product-img">
+        <h2 class="product-title"> Alimento Balanceado </h2>
+        <span class="price">$570</span>
+        <i class='bx bx-shopping-bag add-cart'></i>
+      </div>
+
+      <div class="product-box">
+        <img src="" alt="" class="product-img">
+        <h2 class="product-title"> Collar </h2>
+        <span class="price">$570</span>
+        <i class='bx bx-shopping-bag add-cart'></i>
+      </div>
+
+      <div class="product-box">
+        <img src="" alt="" class="product-img">
+        <h2 class="product-title"> Hueso </h2>
+        <span class="price">$570</span>
+        <i class='bx bx-shopping-bag add-cart'></i>
+      </div>
+
+      <div class="product-box">
+        <img src="" alt="" class="product-img">
+        <h2 class="product-title"> Soga </h2>
+        <span class="price">$570</span>
+        <i class='bx bx-shopping-bag add-cart'></i>
+      </div>
+
+      <div class="product-box">
+        <img src="" alt="" class="product-img">
+        <h2 class="product-title"> Cama </h2>
+        <span class="price">$570</span>
+        <i class='bx bx-shopping-bag add-cart'></i>
+      </div>
+
+      <div class="product-box">
+        <img src="" alt="" class="product-img">
+        <h2 class="product-title"> Soga </h2>
+        <span class="price">$570</span>
+        <i class='bx bx-shopping-bag add-cart'></i>
+      </div>
+
+      <div class="product-box">
+        <img src="" alt="" class="product-img">
+        <h2 class="product-title"> Soga </h2>
+        <span class="price">$570</span>
+        <i class='bx bx-shopping-bag add-cart'></i>
       </div>
     </div>
-  </nav>
+  </section>
 
-<body>
-    <h1>Carrito de compras</h1>
 
-    <div id="divProductos"></div>
-    
-    <div class="container"></div>
-
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
