--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> Ecommerce web - Shopping Cart Petshop </title>
+  <title> Ecommerce web - Shopping Cart </title>
   <link rel="stylesheet" href="css/styles.css">
   <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -14,7 +14,7 @@
 
   <header>
     <div class="nav container">
-      <a href="#" class="logo">Petshop </a>
+      <a href="#" class="logo">Tech E-commerce </a>
       <i class='bx bx-shopping-bag' id="cart-icon"></i>
       <div class="cart">
         <h2 class="cart-title">Tu Carrito</h2>
@@ -22,9 +22,9 @@
         <div class="cart-content">
 
           <div class="cart-box">
-            <img src="" alt="" class="cart-img">
+            <img src="/img/img2.jpg" alt="" class="cart-img">
             <div class="detail-box">
-              <div class="cart-product-title">Comedero acero Inoxidable</div>
+              <div class="cart-product-title">Camara Logitech</div>
               <div class="cart-price">850$</div>
               <input type="number" value="1" class="cart-quantity">
             </div>
@@ -43,6 +43,8 @@
 
     </div>
 
+
+
   </header>
 
   <section class="shop container">
@@ -50,62 +52,109 @@
     <div class="shop-content">
 
       <div class="product-box">
-        <img src="" alt="" class="product-img">
-        <h2 class="product-title"> Comedero Inoxidable </h2>
-        <span class="price">$570</span>
+        <img src="/img/img1.jpg" alt="" class="product-img">
+        <h2 class="product-title"> Auricular Beat </h2>
+        <span class="price">$5700</span>
         <i class='bx bx-shopping-bag add-cart'></i>
       </div>
 
       <div class="product-box">
-        <img src="" alt="" class="product-img">
-        <h2 class="product-title"> Alimento Balanceado </h2>
-        <span class="price">$570</span>
+        <img src="/img/img2.jpg" alt="" class="product-img">
+        <h2 class="product-title"> Camara Logitech </h2>
+        <span class="price">$3820</span>
         <i class='bx bx-shopping-bag add-cart'></i>
       </div>
 
       <div class="product-box">
-        <img src="" alt="" class="product-img">
-        <h2 class="product-title"> Collar </h2>
-        <span class="price">$570</span>
+        <img src="/img/img3.jpg" alt="" class="product-img">
+        <h2 class="product-title"> Procesador Core I5 </h2>
+        <span class="price">$35000</span>
         <i class='bx bx-shopping-bag add-cart'></i>
       </div>
 
       <div class="product-box">
-        <img src="" alt="" class="product-img">
-        <h2 class="product-title"> Hueso </h2>
-        <span class="price">$570</span>
+        <img src="/img/img4.jpg" alt="" class="product-img">
+        <h2 class="product-title"> Auricular Sony </h2>
+        <span class="price">$6800</span>
         <i class='bx bx-shopping-bag add-cart'></i>
       </div>
 
       <div class="product-box">
-        <img src="" alt="" class="product-img">
-        <h2 class="product-title"> Soga </h2>
-        <span class="price">$570</span>
+        <img src="/img/img5.jpg" alt="" class="product-img">
+        <h2 class="product-title"> Case gamer </h2>
+        <span class="price">$3600</span>
         <i class='bx bx-shopping-bag add-cart'></i>
       </div>
 
       <div class="product-box">
-        <img src="" alt="" class="product-img">
-        <h2 class="product-title"> Cama </h2>
-        <span class="price">$570</span>
+        <img src="/img/img6.jpg" alt="" class="product-img">
+        <h2 class="product-title"> Teclado Logitech </h2>
+        <span class="price">$2800</span>
         <i class='bx bx-shopping-bag add-cart'></i>
       </div>
 
       <div class="product-box">
-        <img src="" alt="" class="product-img">
-        <h2 class="product-title"> Soga </h2>
-        <span class="price">$570</span>
+        <img src="/img/img7.jpg" alt="" class="product-img">
+        <h2 class="product-title"> Disco Portatil Samsung </h2>
+        <span class="price">$8200</span>
         <i class='bx bx-shopping-bag add-cart'></i>
       </div>
 
       <div class="product-box">
-        <img src="" alt="" class="product-img">
-        <h2 class="product-title"> Soga </h2>
-        <span class="price">$570</span>
+        <img src="/img/img8.jpg" alt="" class="product-img">
+        <h2 class="product-title"> Parlante </h2>
+        <span class="price">$4300</span>
         <i class='bx bx-shopping-bag add-cart'></i>
       </div>
     </div>
   </section>
+
+
+  <div class="newsletter container">
+
+    <form id="formulario">
+
+      <div id="registros">
+        <h3 class="newsletter-title">Registrate ahora</h3>
+        <br>
+
+        <p class="newsletter-desc">
+          Recibe de <b>E Tech Shop</b> nuestras ultimas promociones en todos nuestros productos
+        </p>
+
+      </div>
+      <br>
+      <br>
+
+      <input type="name" name="nombre" class="name-field" id="inputName" placeholder="Nombre y Apellido" requerido>
+
+      <input type="email" name="email" class="email-field" id="inputEmail" placeholder="Email Adress" requerido>
+
+      <button type="submit" class="btn-newsletter">Registrarme</button>
+
+    </form>
+
+  </div>
+
+  <br>
+  <br>
+
+  <footer class="footer">
+    <div class="container footer__grid">
+
+        <p class="container footer__text"> Web designed for César Aular Belizario | 2022 | Copyright |
+            Email contact: cesar.aularb@gmail.com | Teléfono: 11 6115 5315 </p>
+
+
+        <section class="footer__contact">
+
+            <h3 class="footer__title"> Contactanos </h3>
+
+          
+        </section>
+    </div>
+
+</footer>
 
 
   <script src="script.js"></script>
