--- a/index.html
+++ b/index.html
@@ -14,27 +14,17 @@
 
   <header>
     <div class="nav container">
-      <a href="#" class="logo">Tech E-commerce </a>
+      <a href="#" class="logo">Aularb Tech E-commerce </a>
       <i class='bx bx-shopping-bag' id="cart-icon"></i>
       <div class="cart">
         <h2 class="cart-title">Tu Carrito</h2>
 
         <div class="cart-content">
-
-          <div class="cart-box">
-            <img src="/img/img2.jpg" alt="" class="cart-img">
-            <div class="detail-box">
-              <div class="cart-product-title">Camara Logitech</div>
-              <div class="cart-price">850$</div>
-              <input type="number" value="1" class="cart-quantity">
-            </div>
-
-            <i class="bx bxs-trash-alt cart-remove"></i>
-          </div>
+    
         </div>
 
         <div class="total">
-          <div class="total-title">total</div>
+          <div class="total-title">TOTAL</div>
           <div class="total-price">$0</div>
         </div>
         <button type="button" class="btn-buy">Compra ahora</button>
@@ -156,7 +146,7 @@
 
 </footer>
 
-
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.15/dist/sweetalert2.all.min.js"></script>
   <script src="script.js"></script>
 </body>
 
