--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
     </div>
 
 
-
   </header>
 
   <section class="shop container">
     <h2 class="section title">Productos en tienda</h2>
+    
     <div class="shop-content">
 
       <div class="product-box">
@@ -98,6 +98,8 @@
       </div>
     </div>
   </section>
+
+  <div class="productos" class="row"></div>
 
 
   <div class="newsletter container">
