--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+  <div id="divProductos"></div>
+  <div id="divBuscados" class="row"></div>
 
   <header>
     <div class="nav container">
@@ -98,8 +100,6 @@
       </div>
     </div>
   </section>
-
-  <div class="productos" class="row"></div>
 
 
   <div class="newsletter container">
